# centaurus

./: .doxygenrc  .gitignore  .travis.yml  AUTHORS  Cargo.toml  Makefile.am  README.md  aliases.js  autogen.sh  centaurus.example.yml  configure.ac  index.html  log4rs.yml  search-index.js  settings.html  source-files.js
centaurus/: Cargo.toml
centaurus-cli/: Cargo.toml
centaurus-cli/src/: arguments.rs  main.rs
centaurus/benches/: render.rs
centaurus/src/: camera.rs  lib.rs  ray.rs  vertex.rs
centaurus_core/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Camera.html  struct.Ray.html  struct.Scene.html  struct.Vertex.html
centaurus_core/benches/: render.rs
centaurus_core/camera/: index.html  struct.Camera.html
centaurus_core/image/: index.html  sidebar-items.js  struct.Color.html  struct.Image.html
centaurus_core/light/: index.html  sidebar-items.js  struct.Lightbulb.html  struct.Spot.html  struct.Sun.html  trait.Light.html
centaurus_core/object/: index.html  sidebar-items.js  struct.Intersection.html  struct.Sphere.html  struct.Triangle.html  trait.Intersect.html  trait.Object.html
centaurus_core/ray/: index.html  struct.Ray.html
centaurus_core/render/: index.html  sidebar-items.js  struct.DefaultRenderer.html  struct.RayTracerRenderer.html  trait.Renderer.html
centaurus_core/scene/: struct.Scene.html
centaurus_core/src/: lib.rs  ray.rs  scene.rs  vertex.rs
centaurus_core/vertex/: index.html  struct.Vertex.html
src/: .gitignore  .vimrc  Makefile.am  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  centaurus.c  centaurus.cpp  color.cpp  color.hpp  displayer.hpp  displayer_png.cpp  displayer_png.hpp  displayer_txt.cpp  displayer_txt.hpp  factorial.c  factorial.h  factory_displayer.cpp  factory_displayer.hpp  gettext.h  light.cpp  light.hpp  light_point.cpp  light_point.hpp  light_sun.cpp  light_sun.hpp  localization.c  localization.cpp  localization.h  localization.hpp  matrix.hpp  object.cpp  object.hpp  point.cpp  point.hpp  ray.cpp  ray.hpp  render.cpp  render.hpp  (+5 more)
src/alga/: lib.rs.html  macros.rs.html
src/arrayvec/: array.rs.html  array_string.rs.html  char.rs.html  errors.rs.html  lib.rs.html  range.rs.html
src/backtrace/: capture.rs.html  dylib.rs.html  lib.rs.html
src/backtrace_sys/: lib.rs.html
src/bitflags/: lib.rs.html
src/byteorder/: io.rs.html  lib.rs.html
src/centaurus_cli/: arguments.rs.html  main.rs.html
src/centaurus_core/: camera.rs.html  lib.rs.html  ray.rs.html  scene.rs.html  vertex.rs.html
src/cfg_if/: lib.rs.html
src/chrono/: date.rs.html  datetime.rs.html  div.rs.html  lib.rs.html  round.rs.html
src/clap_verbosity_flag/: lib.rs.html
src/clicolors_control/: common.rs.html  lib.rs.html  terminfo.rs.html  unix.rs.html
src/console/: common_term.rs.html  kb.rs.html  lib.rs.html  term.rs.html  unix_term.rs.html  utils.rs.html
src/ctor/: lib.rs.html
src/deflate/: bit_reverse.rs.html  bitstream.rs.html  chained_hash_table.rs.html  checksum.rs.html  compress.rs.html  compression_options.rs.html  deflate_state.rs.html  encoder_state.rs.html  huffman_lengths.rs.html  huffman_table.rs.html  input_buffer.rs.html  length_encode.rs.html  lib.rs.html  lz77.rs.html  lzvalue.rs.html  matching.rs.html  output_writer.rs.html  rle.rs.html  stored_block.rs.html  writer.rs.html  zlib.rs.html
src/dtoa/: diyfp.rs.html  dtoa.rs.html  lib.rs.html
src/env_logger/: fmt.rs.html  lib.rs.html
src/erased_serde/: any.rs.html  de.rs.html  error.rs.html  lib.rs.html  macros.rs.html  private.rs.html  ser.rs.html
src/failure/: compat.rs.html  context.rs.html  error.rs.html  error_message.rs.html  lib.rs.html  macros.rs.html  result_ext.rs.html  sync_failure.rs.html
src/failure_derive/: lib.rs.html
src/ghost/: args.rs.html  derive.rs.html  lib.rs.html  parse.rs.html  variance.rs.html  visibility.rs.html
src/gif/: common.rs.html  encoder.rs.html  lib.rs.html  traits.rs.html  util.rs.html
src/indicatif/: format.rs.html  lib.rs.html  progress.rs.html  style.rs.html  utils.rs.html
src/inflate/: checksum.rs.html  lib.rs.html  reader.rs.html  utils.rs.html  writer.rs.html
src/inventory/: lib.rs.html
src/inventory_impl/: lib.rs.html
src/itoa/: lib.rs.html
src/lazy_static/: lazy.rs.html
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/matrixmultiply/: aligned_alloc.rs.html  archparam.rs.html  debugmacros.rs.html  dgemm_kernel.rs.html  gemm.rs.html  kernel.rs.html  lib.rs.html  loopmacros.rs.html  sgemm_kernel.rs.html  util.rs.html
src/nalgebra/: lib.rs.html
src/nodrop/: lib.rs.html
src/num_complex/: lib.rs.html
src/num_cpus/: lib.rs.html
src/num_derive/: lib.rs.html
src/num_traits/: bounds.rs.html  cast.rs.html  float.rs.html  identities.rs.html  int.rs.html  lib.rs.html  macros.rs.html  pow.rs.html  real.rs.html  sign.rs.html
src/number_prefix/: lib.rs.html
src/pretty_assertions/: format_changeset.rs.html  lib.rs.html
src/proc_macro2/: stable.rs.html
src/rand/: jitter.rs.html  os.rs.html  rand_impls.rs.html  read.rs.html  reseeding.rs.html  seq.rs.html
src/rawpointer/: lib.rs.html
src/rayon/: delegate.rs.html  lib.rs.html  math.rs.html  option.rs.html  par_either.rs.html  prelude.rs.html  private.rs.html  range.rs.html  result.rs.html  split_producer.rs.html  str.rs.html  vec.rs.html
src/rayon_core/: job.rs.html  latch.rs.html  lib.rs.html  log.rs.html  registry.rs.html  unwind.rs.html  util.rs.html
src/rustc_demangle/: lib.rs.html
src/serde_json/: de.rs.html  error.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  map.rs.html  number.rs.html  read.rs.html  ser.rs.html
src/serde_yaml/: de.rs.html  error.rs.html  lib.rs.html  mapping.rs.html  number.rs.html  path.rs.html  ser.rs.html
src/syn/: attr.rs.html  buffer.rs.html  data.rs.html  derive.rs.html  error.rs.html  expr.rs.html  generics.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  mac.rs.html  macros.rs.html  op.rs.html  (+10 more)
tests/: .gitignore  Makefile.am  check_factorial.c  check_triangle.cpp  check_vector.cpp  color_test.cpp  matrix_test.cpp  point_test.cpp  ray_test.cpp  triangle_test.cpp  vector_test.cpp
(+5739 files in other folders)
