[package]
name = "centaurus-cli"
version = "0.1.0"
authors = ["woshilapin <woshilapin@tuziwo.info>"]
edition = "2018"

[dependencies]
centaurus = { path = "../centaurus" }
clap = "2.32.0"
clap-verbosity-flag = "0.2.0"
image = "0.21.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_yaml = "0.8.8"
structopt = "0.2.14"
