[package]
name = "centaurus-cli"
version = "0.1.0"
authors = ["woshilapin <woshilapin@tuziwo.info>"]
edition = "2018"

[dependencies]
centaurus = { path = "../centaurus" }
clap = "2.33.0"
clap-verbosity-flag = "0.2.0"
log4rs = "0.8.3"
image = "0.21.1"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_yaml = "0.8.8"
structopt = "0.2.15"

[dependencies.log]
version = "0.4.6"
features = ["max_level_trace", "release_max_level_info"]