[package]
name = "centaurus"
version = "0.1.0"
authors = ["woshilapin <woshilapin@tuziwo.info>"]
edition = "2018"

[dependencies]
serde = "1.0.90"
serde_derive = "1.0.90"

[dependencies.nalgebra]
version = "0.17.2"
features = ["serde-serialize"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "render"
harness = false
