[package]
name = "centaurus_core"
version = "0.1.0"
authors = ["woshilapin <woshilapin@tuziwo.info>"]
edition = "2018"

[dependencies]
alga = "0.8.2"
indicatif = "0.11.0"
serde = "1.0.90"
serde_derive = "1.0.90"

[dependencies.nalgebra]
version = "0.17.2"
features = ["serde-serialize"]

[dependencies.log]
version = "0.4.6"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "render"
harness = false
